[package]
name = "collision_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy-tnua = "0.18.0"
bevy-tnua-xpbd3d = "0.4.0"
bevy_xpbd_3d = "0.4.2"

[profile.release]
opt-level = 3   
lto = true      
debug = false          
rpath = false 
panic = "abort"
incremental = false
codegen-units = 1 

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3